# SDA_PacMan

./: .gitignore  CMakeLists.txt  README.md  input.c  input.h  pacman.c
code/: game.c  graphics.c  input.c  level.c  main.c  score.c
header/: game.h  graphics.h  input.h  level.h  position.h  score.h
header/customData/: direction.h  mazeObstacles.h
header/graphics/: commonGraphics.h  footerGraphics.h  gameGraphics.h  headerGraphics.h  mainMenuGraphics.h
header/main/: coordinates.h  game.h  ghost.h  graphics.h  input.h  maze.h  pacman.h  position.h  score.h
header/utils/: globalVariables.h  renderer.h  sdlUtils.h  spriteUtils.h
src/: game.c  graphics.c
src/audio/files/: audio.c  audio.h
src/customData/: ghostsColors.h  position.h
src/graphics/: commonGraphics.c  footerGraphics.c  footerGraphics.h  gameGraphics.c  gameGraphics.h  headerGraphics.c  headerGraphics.h  mainMenuGraphics.c  mainMenuGraphics.h
src/main/: coordinates.c  coordinates.h  game.c  game.h  ghost.c  graphics.c  input.c  input.h  level.c  main.c  maze.c  pacman.c  pacman.h  position.c  score.c
src/utils/: animationsHandler.c  animationsHandler.h  globalVariables.h  renderer.c  renderer.h  sdlUtils.c  spriteUtils.c  spriteUtils.h  timer.c  timer.h
